Pull request #10: Downgrade most packages to match 1.4-release.
Merge in CORE/ffs from ~ALEX2101/ffs:alex2101 to alex2101

Squashed commit of the following:

commit eafe3b7220425c4f0c3b9fdf874c1fe29257b7a4
Author: alex2101 <alex2101@gmail.com>
Date:   Fri Jun 3 12:14:39 2022 -0300

    Downgrade most packages to match 1.4-release.

--- a/profiles/gnu/steps/cross_tools.yaml
+++ b/profiles/gnu/steps/cross_tools.yaml
@@ -28,6 +28,8 @@ cross_tools:
           --target=${CLFS_TARGET} \
           --with-sysroot=${CLFS} \
           --with-lib-path=${CLFS}/tools/lib \
+          --enable-gold=yes \
+          --enable-ld=default \
           --disable-nls \
           --disable-static \
           --enable-64-bit-bfd \
@@ -71,7 +73,6 @@ cross_tools:
           --host=${CLFS_HOST} \
           --target=${CLFS_TARGET} \
           --with-sysroot=${CLFS} \
-          --with-local-prefix=${CLFS}/tools \
           --with-native-system-header-dir=/tools/include \
           --disable-shared \
           --without-headers \
@@ -129,7 +130,6 @@ cross_tools:
           --target=${CLFS_TARGET} \
           --host=${CLFS_HOST} \
           --with-sysroot=${CLFS} \
-          --with-local-prefix=${CLFS}/tools \
           --with-native-system-header-dir=/tools/include \
           --with-lib-path=${CLFS}/tools/lib \
           --disable-nls \
