--- a/profiles/gnu/steps/fchroot.yaml
+++ b/profiles/gnu/steps/fchroot.yaml
@@ -66,7 +66,7 @@ fchroot:
         --disable-static
         make
         make install
-        install -d /var/db/pkg/dev-libs/libffi-${LIBFFI_VERSION}
+        install -d /var/db/pkg/dev-libs/libffi-${LIBFFI_VERSION/-/_}
     - python: |
         ./configure \
         --prefix=/tools \
