--- a/ci/mottainai/mottainai-funtoo-musl-riscv-64bit-fchroot.yaml
+++ b/ci/mottainai/mottainai-funtoo-musl-riscv-64bit-fchroot.yaml
@@ -5,7 +5,7 @@ script:
 - sleep 5
 - >-
   ego sync && emerge --jobs pyyaml jinja patchelf
-- bin/sourcer fetch
+- bin/sourcer musl fetch
 - bin/builder musl riscv-64bit cross_tools
 - bin/builder musl riscv-64bit tools
 - bin/builder musl riscv-64bit fchroot
