--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -23,14 +23,15 @@ fchroot:
         export ROOT=/tmp/stage1root
         # create symlink to real meta-repo to allow ego to pick up profiles inside ROOT...
         install -m 0755 -o 250 -g 250 -d $ROOT/var/git
-        ln -s /var/git/meta-repo $ROOT/var/git/meta-repo
+        ln -sf /var/git/meta-repo $ROOT/var/git/
+        ln -sf /etc/portage ${ROOT}/etc/
         ego profile mix-in +stage1
         # fix a circular dep
         install -d /var/db/pkg/sys-apps/openrc-9999
         # It's important to merge baselayout first so it can set perms on key dirs
         emerge --nodeps baselayout
         emerge --noreplace --oneshot \
-          --rebuild-exclude="sys-apps/openrc sys-libs/glibc net-misc/curl sys-devel/gcc" \
+          --rebuild-exclude "sys-apps/openrc sys-libs/glibc net-misc/curl sys-devel/gcc" \
           app-arch/bzip2 \
           app-arch/gzip \
           app-arch/tar \
