--- a/profiles/gnu/steps/cross_tools.yaml
+++ b/profiles/gnu/steps/cross_tools.yaml
@@ -3,29 +3,25 @@ cross_tools:
     template: base.tmpl
   steps:
     - none: |
-        if [ -e "${CLFS}/tools" ] || [ -e "${CLFS}/cross-tools" ]; then
-          echo "Please remove ${CLFS}/tools and ${CLFS}/cross-tools before running."
+        if [ -e "${CLFS}/cross-tools" ]; then
+          echo "Please remove ${CLFS}/cross-tools before running."
           exit 1
         fi
         # initial setup:
         install -d "${CLFS}/cross-tools"
-        install -d "${CLFS}/tools"
-        install -d "${CLFS}/usr"
-        install -d "${CLFS}/tools/lib"
+        install -d "${CLFS}/lib"
         install -d "${CLFS}/usr/lib"
         ln -sf lib "${CLFS}/lib64"
-        ln -sf lib "${CLFS}/tools/lib64"
         ln -sf lib "${CLFS}/usr/lib64"
         # make sure it's a symlink
         test -L "${CLFS}/lib64"
-        test -L "${CLFS}/tools/lib64"
         test -L "${CLFS}/usr/lib64"
         # Create critical directories:
-        install -d ${CLFS}/{dev,proc,run,sys,etc,lib,var}
+        install -d ${CLFS}/{dev,proc,run,sys,etc,var}
         install -m 1777 -d ${CLFS}/tmp ${CLFS}/var/tmp
     - linux: |
         make mrproper
-        make ARCH={{arch}} INSTALL_HDR_PATH=${CLFS}/tools headers_install
+        make ARCH={{arch}} INSTALL_HDR_PATH=${CLFS}/usr headers_install
     - automake: |
         ./configure \
           --prefix=${CLFS}/cross-tools
@@ -37,7 +33,6 @@ cross_tools:
           make
           make install
           ln -s pkgconf ${CLFS}/cross-tools/bin/pkg-config
-
     - binutils: |
         mkdir binutils-build && cd binutils-build
         AR=ar AS=as ../configure \
@@ -45,7 +40,7 @@ cross_tools:
           --host=${CLFS_HOST} \
           --target=${CLFS_TARGET} \
           --with-sysroot=${CLFS} \
-          --with-lib-path=${CLFS}/tools/lib \
+          --with-lib-path=${CLFS}/usr/lib \
           --enable-gold=yes \
           --enable-ld=default \
           --disable-nls \
@@ -91,7 +86,7 @@ cross_tools:
           --host=${CLFS_HOST} \
           --target=${CLFS_TARGET} \
           --with-sysroot=${CLFS} \
-          --with-native-system-header-dir=/tools/include \
+          --with-native-system-header-dir=/usr/include \
           --disable-shared \
           --without-headers \
           --with-newlib \
@@ -117,23 +112,23 @@ cross_tools:
     - glibc: |
         mkdir glibc-build && cd glibc-build
         ../configure \
-          --prefix=/tools \
+          --prefix=/usr \
+          --libdir=/usr/lib \
           --build=${CLFS_HOST} \
           --host=${CLFS_TARGET} \
           --disable-profile \
           --enable-stack-protector=strong \
           --with-binutils=${CLFS}/cross-tools/bin \
-          --with-headers=${CLFS}/tools/include
+          --with-headers=${CLFS}/usr/include
         make
         make DESTDIR=${CLFS} install
 
-        install -d ${CLFS}/tools/${CLFS_TARGET}
-        ln -sf ../lib ${CLFS}/tools/${CLFS_TARGET}/lib
-        sed '/RTLDLIST=/s@/tools@@g' -i ${CLFS}/tools/bin/ldd
-        cd "${CLFS}"/tools
+        install -d ${CLFS}/usr/${CLFS_TARGET}
+        ln -sf ../lib ${CLFS}/usr/${CLFS_TARGET}/lib
+        cd "${CLFS}"/usr
         find lib -type f \
           -iname 'crt*.o' \
-          -exec ln -sf ../../../tools/{} "${CLFS}"/cross-tools/"${CLFS_TARGET}"/{} \;
+          -exec ln -sf ../../../usr/{} "${CLFS}"/cross-tools/"${CLFS_TARGET}"/{} \;
     - gcc: |
         mkdir gcc-build && cd gcc-build
         AR=ar LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" \
@@ -148,8 +143,9 @@ cross_tools:
           --target=${CLFS_TARGET} \
           --host=${CLFS_HOST} \
           --with-sysroot=${CLFS} \
-          --with-native-system-header-dir=/tools/include \
-          --with-lib-path=${CLFS}/tools/lib \
+          --with-native-system-header-dir=/usr/include \
+          --with-lib-path=${CLFS}/usr/lib \
+          --enable-initfini-array \
           --disable-nls \
           --disable-static \
           --enable-languages=c,c++ \
