--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -21,6 +21,15 @@ fchroot:
         export PYTHON_ABIS="$(portageq envvar PYTHON_ABIS)"
         export FEATURES="-pid-sandbox nodoc noman noinfo"
         export ROOT=/tmp/stage1root
+        rm -rf $ROOT
+        # work around an issue where split-usr is being unset.
+        export USE="split-usr"
+        install -m 0755 -d $ROOT/usr/bin
+        install -m 0755 -d $ROOT/bin
+        # also fix a lib issue -- did I miss some steps from metro?
+        install -m 0755 -d $ROOT/lib64
+        ln -sf lib64 $ROOT/lib
+
         # create symlink to real meta-repo to allow ego to pick up profiles inside ROOT...
         install -m 0755 -o 250 -g 250 -d $ROOT/var/git
         install -d ${ROOT}/etc
