--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -29,7 +29,7 @@ fchroot:
         # also fix a lib issue -- did I miss some steps from metro?
         install -m 0755 -d $ROOT/lib64
         ln -sf lib64 $ROOT/lib
-
+        install -d ${ROOT}/{proc,sys,dev}
         # create symlink to real meta-repo to allow ego to pick up profiles inside ROOT...
         install -m 0755 -o 250 -g 250 -d $ROOT/var/git
         install -d ${ROOT}/etc
@@ -43,43 +43,48 @@ fchroot:
         echo "dev-libs/libxml2 python" > /etc/portage/package.use/libxml2
         # It's important to merge baselayout first so it can set perms on key dirs
         emerge --nodeps baselayout
+        
+        ldconfig
+        /usr/sbin/env-update
+        source /etc/profile
+
         emerge -u --noreplace --oneshot \
           --rebuild-exclude "sys-apps/openrc sys-libs/glibc net-misc/curl sys-devel/gcc" \
-          app-arch/bzip2 \
-          app-arch/gzip \
-          app-arch/tar \
-          app-arch/xz-utils \
-          app-shells/bash \
-          net-misc/rsync \
-          net-misc/wget \
-          sys-devel/autoconf \
-          sys-devel/automake \
-          sys-devel/libtool \
-          sys-apps/coreutils \
-          sys-apps/diffutils \
-          sys-apps/file \
-          sys-apps/findutils \
-          sys-apps/gawk \
-          sys-apps/grep \
-          sys-apps/less \
-          sys-apps/net-tools \
-          sys-apps/sed \
-          sys-apps/texinfo \
-          sys-devel/binutils \
-          sys-devel/bison \
-          sys-devel/flex \
-          sys-devel/gcc \
-          sys-devel/gettext \
-          sys-devel/gnuconfig \
-          sys-devel/make \
-          sys-devel/patch \
-          sys-libs/pam \
-          virtual/editor \
-          virtual/libc \
-          virtual/os-headers \
-          virtual/package-manager \
-          sys-apps/openrc
+          elfutils
+        #  app-arch/bzip2 \
+        #  app-arch/gzip \
+        #  app-arch/tar \
+        #  app-arch/xz-utils \
+        #  app-shells/bash \
+        #  net-misc/rsync \
+        #  net-misc/wget \
+        #  sys-devel/autoconf \
+        #  sys-devel/automake \
+        #  sys-devel/libtool \
+        #  sys-apps/coreutils \
+        #  sys-apps/diffutils \
+        #  sys-apps/file \
+        #  sys-apps/findutils \
+        #  sys-apps/gawk \
+        #  sys-apps/grep \
+        #  sys-apps/less \
+        #  sys-apps/net-tools \
+        #  sys-apps/sed \
+        #  sys-apps/texinfo \
+        #  sys-devel/binutils \
+        #  sys-devel/bison \
+        #  sys-devel/flex \
+        #  sys-devel/gcc \
+        #  sys-devel/gettext \
+        #  sys-devel/gnuconfig \
+        #  sys-devel/make \
+        #  sys-devel/patch \
+        #  sys-libs/pam \
+        #  virtual/editor \
+        #  virtual/libc \
+        #  virtual/os-headers \
+        #  virtual/package-manager \
+        #  sys-apps/openrc
         gcc-config 1
-        install -d ${ROOT}/{proc,sys,dev}
         ego profile mix-in -stage1
 
